* `Sources::CSV` and `Sources::Enumerable` (PR#139)
* `Destinations::Lambda` (PR#139)
* `Sources::JsonDir` and `Jobs::JsonToCsvJob` (PR#140)
* `Clean::EnsureConsistentFields` transform (PR#140)
* Utility classes to clean ISBD trailing punctuation from name and role term values extracted from MARC data (PR#141)
* `Marc::ExtractSubfieldsFromField` transform (PR#141)

=== Changed
* Transforms that take an `action` argument now mix in the new `ActionArgumentable` module and validate the argument values in a consistent way (PR#138)
* Name and role term values extracted from MARC data by subclasses of `Transforms::Marc::ExtractBaseNameData` are run through `Utils::MarcNameCleaner` and `Utils::MarcRoleTermCleaner` (PR#141)

=== Bugfixes
* Fixes issue where job registry entry with a Marc source and CSV destination could not be used as a source or lookup in jobs (PR#137)

=== Deleted

=== Deprecated/Will break in a future version

=== Dev
* Adds `Kiba::Extend::ErrMod` module to be included into `Kiba::Extend`-specific error classes. This allows us to subclass each application-specific error to the semantically appropriate Ruby exception class, while retaining the ability to identify/scope/rescue only application-specific errors. (PR#138)
* Add `:info` method to `Kiba::Extend::ErrMod` module, to print error type, message, and backtrace to STDOUT in a consistent way. (PR#141)

== Releases

=== 3.3.0 - 2023-02-17

==== Added
* `StringValue::ToArray` transform (PR#111)
* Two mixin modules to Transforms to support deprecating non-preferred parameter signatures:
** `Transforms::SepDeprecatable` (PR#124)
** `Transforms::MultivalPlusDelimDeprecatable` (PR#124)
* `Utils::StringNormalizer` service class (PR#124)
* `ignore_case` and `normalized` parameters for `Deduplicate::GroupedFieldValues` (PR#124)
* Options to `Clean::StripFields` transform (PR#129):
** Ability to pass `fields: :all` to strip all fields in a table